--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,47 +1,42 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.183.0/containers/ubuntu
 {
-	"name": "ESP-IDF QEMU",
+	"name": "ESP-IDF & ESP-ADF environment",
 	"build": {
-		"dockerfile": "Dockerfile"
+	  "dockerfile": "Dockerfile"
 	},
-	// Add the IDs of extensions you want installed when the container is created
-	"workspaceMount": "source=${localWorkspaceFolder},target=${localWorkspaceFolder},type=bind",
-	/* the path of workspace folder to be opened after container is running
-	 */
-	"workspaceFolder": "${localWorkspaceFolder}",
-	"mounts": [
-		"source=extensionCache,target=/root/.vscode-server/extensions,type=volume"
-	],
+	"forwardPorts": [3232],
+	"containerEnv": {
+	  "IDF_PATH": "/opt/esp/idf",
+	  "IDF_TOOLS_PATH": "/opt/esp",
+	  "ADF_PATH": "/opt/esp/esp-adf"
+	},
 	"customizations": {
-		"vscode": {
-			"settings": {
-				"terminal.integrated.defaultProfile.linux": "bash",
-				"idf.espIdfPath": "/opt/esp/idf",
-				"idf.customExtraPaths": "",
-				"idf.pythonBinPath": "/opt/esp/python_env/idf5.1_py3.8_env/bin/python",
-				"idf.toolsPath": "/opt/esp",
-				"idf.gitPath": "/usr/bin/git"
-			},
-			"extensions": [
-				"ms-vscode.cpptools",
-				"espressif.esp-idf-extension"
-			],
+	  "vscode": {
+		"settings": {
+		  "terminal.integrated.defaultProfile.linux": "bash",
+		  "idf.espIdfPath": "/opt/esp/idf",
+		  "idf.pythonBinPath": "/opt/esp/python_env/idf5.2_py3.10_env/bin/python",
+		  "idf.toolsPath": "/opt/esp",
+		  "idf.customExtraPaths": "/opt/esp/tools/xtensa-esp-elf-gdb/12.1_20221002/xtensa-esp-elf-gdb/bin:/opt/esp/tools/riscv32-esp-elf-gdb/12.1_20221002/riscv32-esp-elf-gdb/bin:/opt/esp/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin:/opt/esp/tools/riscv32-esp-elf/esp-13.2.0_20230928/riscv32-esp-elf/bin:/opt/esp/tools/esp32ulp-elf/2.35_20220830/esp32ulp-elf/bin:/opt/esp/tools/openocd-esp32/v0.12.0-esp32-20230921/openocd-esp32/bin:/opt/esp/tools/esp-rom-elfs/20230320",
+		  "idf.customExtraVars": {
+			"OPENOCD_SCRIPTS": "/opt/esp/tools/openocd-esp32/v0.12.0-esp32-20230921/openocd-esp32/share/openocd/scripts",
+			"ESP_ROM_ELF_DIR": "/opt/esp/tools/esp-rom-elfs/20230320/"
+		  },
+		  "idf.gitPath": "/usr/bin/git",
+		  "clang-format.executable": "/usr/bin/clang-format",
+		  "C_Cpp.formatting": "clangFormat",
+		  "editor.formatOnSave": true
 		},
-		"codespaces": {
-			"settings": {
-				"terminal.integrated.defaultProfile.linux": "bash",
-				"idf.espIdfPath": "/opt/esp/idf",
-				"idf.customExtraPaths": "",
-				"idf.pythonBinPath": "/opt/esp/python_env/idf5.1_py3.8_env/bin/python",
-				"idf.toolsPath": "/opt/esp",
-				"idf.gitPath": "/usr/bin/git"
-			},
-			"extensions": [
-				"ms-vscode.cpptools",
-				"espressif.esp-idf-extension"
-			],
-		}
+		"extensions": [
+		  "ms-vscode.cpptools",
+		  "ms-vscode.cpptools-extension-pack",
+		  "masuidrive.vsc-esp-updater",
+		  "espressif.esp-idf-extension",
+		  "mutantdino.resourcemonitor"
+		]
+	  }
 	},
 	"runArgs": ["--privileged"]
-}
+  }
+  
